--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title>fontend</title>
   </head>
-  <body>
+  <body style="margin:0;width:100%;">
     <noscript>
       <strong>We're sorry but fontend doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
