--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>fontend</title>
+    <title>小红帽 - 志愿服务管理认证平台</title>
   </head>
   <body style="margin:0;width:100%;">
     <noscript>
