--- a/dx.html
+++ b/dx.html
@@ -16,6 +16,7 @@ var myCaptcha = _dx.Captcha(document.getElementById('captchaBox'), {
     appId: '069ae57274e54291f373478057e1d796',   //appId,开通服务后可在控制台中“服务管理”模块获取
     style: 'inline',
     inlineFloatPosition: 'down',
+    protocol: 'https:',
     success: (token)=>{
       console.log('token:', token)
     },
