--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-cn">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
     <link rel="shortcut icon" type="image/png" href="logo.ico">
-    <title>小红帽 - 志愿服务管理认证平台</title>
+    <title>小红帽 - 南京航空航天大学志愿服务管理认证平台 - 纸飞机青年网络社区</title>
+    <meta name="renderer" content="webkit" />
+    <meta itemprop="name" content="小红帽 - 南京航空航天大学志愿服务管理认证平台"/>
+    <meta name="keywords" content="南京航空航天大学,纸飞机,南航纸飞机,纸飞机青年网络社区,小红帽">
+    <!--<meta itemprop="image" content="//my.nuaa.edu.cn/welcomeh5/images/welcome.jpg" />-->
+    <meta name="description" itemprop="description" content="小红帽，南京航空航天大学青年志愿者协会的官方志愿服务管理认证平台">
   </head>
   <body style="margin:0;width:100%;">
     <noscript>
