--- a/management/index.html
+++ b/management/index.html
@@ -5,7 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="renderer" content="webkit">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>志愿服务认证管理系统</title>
+    <title>小红帽 - 南京航空航天大学志愿服务认证管理系统 - 南京航空航天大学纸飞机青年网络社区</title>
+    <meta name="renderer" content="webkit" />
+    <meta itemprop="name" content="小红帽 - 南京航空航天大学志愿服务管理认证平台"/>
+    <meta name="keywords" content="南京航空航天大学,纸飞机,南航纸飞机,纸飞机青年网络社区,小红帽">
+    <!--<meta itemprop="image" content="//my.nuaa.edu.cn/welcomeh5/images/welcome.jpg" />-->
+    <meta name="description" itemprop="description" content="小红帽，南京航空航天大学青年志愿者协会的官方志愿服务管理认证平台">
   </head>
   <body>
     <script src=<%= htmlWebpackPlugin.options.path %>/tinymce4.7.5/tinymce.min.js></script>
