--- a/management/index.html
+++ b/management/index.html
@@ -13,7 +13,8 @@
     <meta name="description" itemprop="description" content="小红帽，南京航空航天大学青年志愿者协会的官方志愿服务管理认证平台">
   </head>
   <body>
-    <script src=<%= htmlWebpackPlugin.options.path %>/tinymce4.7.5/tinymce.min.js></script>
+    <script src="https://cdn.jsdelivr.net/npm/element-ui@2.8.2/lib/index.js" integrity="sha256-KevC5pqMBDQ9ubHAGbtL1zYqQhraa+n2PFtRwsgediE=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tinymce@5.0.4/tinymce.min.js" integrity="sha256-dBjCQEHAqV69cZeZgDqEGUyqjiU50bQNbiPSZXtPmfw=" crossorigin="anonymous"></script>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
