--- a/management/index.html
+++ b/management/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="南京航空航天大学,纸飞机,南航纸飞机,纸飞机青年网络社区,小红帽">
     <!--<meta itemprop="image" content="//my.nuaa.edu.cn/welcomeh5/images/welcome.jpg" />-->
     <meta name="description" itemprop="description" content="小红帽，南京航空航天大学青年志愿者协会的官方志愿服务管理认证平台">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.8.2/lib/theme-chalk/index.css" integrity="sha256-uTKvLweRQh3ZZ1HQDEp85ucID2EsMNsGgxATXd13QpM=" crossorigin="anonymous">
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/element-ui@2.8.2/lib/index.js" integrity="sha256-KevC5pqMBDQ9ubHAGbtL1zYqQhraa+n2PFtRwsgediE=" crossorigin="anonymous"></script>
