--- a/management/index.html
+++ b/management/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.8.2/lib/theme-chalk/index.css" integrity="sha256-uTKvLweRQh3ZZ1HQDEp85ucID2EsMNsGgxATXd13QpM=" crossorigin="anonymous">
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js" integrity="sha256-chlNFSVx3TdcQ2Xlw7SvnbLAavAQLO0Y/LBiWX04viY=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/element-ui@2.8.2/lib/index.js" integrity="sha256-KevC5pqMBDQ9ubHAGbtL1zYqQhraa+n2PFtRwsgediE=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/tinymce@5.0.4/tinymce.min.js" integrity="sha256-dBjCQEHAqV69cZeZgDqEGUyqjiU50bQNbiPSZXtPmfw=" crossorigin="anonymous"></script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
