--- a/management/index.html
+++ b/management/index.html
@@ -11,9 +11,14 @@
     <meta name="keywords" content="南京航空航天大学,纸飞机,南航纸飞机,纸飞机青年网络社区,小红帽">
     <!--<meta itemprop="image" content="//my.nuaa.edu.cn/welcomeh5/images/welcome.jpg" />-->
     <meta name="description" itemprop="description" content="小红帽，南京航空航天大学青年志愿者协会的官方志愿服务管理认证平台">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/element-ui@2.8.2/lib/theme-chalk/index.css" integrity="sha256-uTKvLweRQh3ZZ1HQDEp85ucID2EsMNsGgxATXd13QpM=" crossorigin="anonymous">
   </head>
   <body>
-    <script src=<%= htmlWebpackPlugin.options.path %>/tinymce4.7.5/tinymce.min.js></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.10/dist/vue.min.js" integrity="sha256-chlNFSVx3TdcQ2Xlw7SvnbLAavAQLO0Y/LBiWX04viY=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/element-ui@2.8.2/lib/index.js" integrity="sha256-KevC5pqMBDQ9ubHAGbtL1zYqQhraa+n2PFtRwsgediE=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/echarts@4.2.1/dist/echarts.min.js" integrity="sha256-XNiBJGZuErA+MsbKwxuTqNMimobZMsVS79SkTUroRz4=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tinymce@5.0.4/tinymce.min.js" integrity="sha256-dBjCQEHAqV69cZeZgDqEGUyqjiU50bQNbiPSZXtPmfw=" crossorigin="anonymous"></script>
+
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
